Fix z-index and position for active hero slide

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -675,7 +675,9 @@ a:visited:hover {
   border-bottom: 1px dotted;
 }
 .hero__title.is-active {
-  position: static;
+  position: relative;
+  top: auto;
+  left: auto;
   z-index: 2;
   opacity: 1;
   -webkit-transition: opacity 0.125s ease-in;
