--- a/src/less/_hero.less
+++ b/src/less/_hero.less
@@ -19,7 +19,9 @@
     border-bottom: 1px dotted;
   }
   &.is-active {
-    position: static;
+    position: relative;
+    top: auto;
+    left: auto;
     z-index: 2;
     opacity: 1;
     -webkit-transition: opacity 0.125s ease-in;
